# xzy

./: .dockerignore  README.md  docker-compose.yml  package-lock.json  package.json
client/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  socket.ts  types.ts
client/src/components/: DiceRoller.tsx  GameBoard.tsx  Leaderboard.tsx  PlayerTokens.tsx  PropertyCard.tsx  TransactionFeed.tsx  WalletPanel.tsx
client/src/hooks/: useWallet.ts
client/src/lib/: apiOrigin.ts  sounds.ts
client/src/stellar/: payments.ts
contracts/: README.md
contracts/sm-monopoly/: .gitignore  Cargo.toml
contracts/sm-monopoly/src/: lib.rs
server/: .env.example  Dockerfile  board.js  bot.js  gameEngine.js  index.js  package-lock.json  package.json  stellar.js
