[package]
name = "sm-monopoly"
version = "0.1.0"
edition = "2021"
description = "Soroban (Rust) stub for future on-chain Monopoly rules — escrow, deeds, auctions"
publish = false
rust-version = "1.81.0"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "25.1.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
